clusters/lab/kiali.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: privileged
