clusters/lab/local-path-provisioner.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local-path-provisioner
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
