clusters/lab/tailscale.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale
  labels:
    istio.io/dataplane-mode: ambient
