clusters/lab/deluge.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deluge
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deluge
  name: deluge
  namespace: deluge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deluge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deluge
    spec:
      containers:
      - name: vpn-connect
        image: lscr.io/linuxserver/wireguard:latest
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          privileged: true
        volumeMounts:
        - name: wg-config
          mountPath: /config/wg_confs
      - image: lscr.io/linuxserver/deluge:2.2.0
        name: deluge
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
            cpu: 250m
        ports:
        - containerPort: 8112
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: config
        hostPath:
          path: /megamind/config/deluge
      - name: downloads
        hostPath:
          path: /bigdata/media/downloads
      - name: wg-config
        secret:
          secretName: wg-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: deluge
  name: daemon
  namespace: deluge
spec:
  ports:
  - name: daemon
    port: 58846
    protocol: TCP
    targetPort: 58846
  selector:
    app.kubernetes.io/name: deluge
  type: LoadBalancer
  loadBalancerClass: tailscale
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: deluge
  name: deluge
  namespace: deluge
spec:
  ports:
  - name: http
    port: 8112
    protocol: TCP
    targetPort: 8112
  selector:
    app.kubernetes.io/name: deluge
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge
  namespace: deluge
spec:
  ingressClassName: tailscale
  rules:
  - host: deluge
    http:
      paths:
      - backend:
          service:
            name: deluge
            port:
              number: 8112
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - deluge
