clusters/lab/jellyfin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    istio.io/dataplane-mode: ambient
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate # To prevent GPU assignment contention
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000
      containers:
      - image: lscr.io/linuxserver/jellyfin:10.11.2
        name: jellyfin
        resources:
          limits:
            memory: 8Gi
            gpu.intel.com/i915: 1
          requests:
            memory: 4Gi
            cpu: 500m
        ports:
        - containerPort: 8096
          protocol: TCP
        - containerPort: 7359
          protocol: UDP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: media
      volumes:
      - name: config
        hostPath:
          path: /megamind/config/jellyfin
      - name: media
        hostPath:
          path: /bigdata/media
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
  - name: http
    port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app.kubernetes.io/name: jellyfin
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ingressClassName: tailscale
  rules:
  - host: jellyfin
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              number: 8096
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jellyfin
