clusters/lab/prowlarr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prowlarr
  labels:
    istio.io/dataplane-mode: ambient
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr
  namespace: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000
      containers:
      - image: lscr.io/linuxserver/prowlarr:2.1.5
        name: prowlarr
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
            cpu: 250m
        ports:
        - containerPort: 9696
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        hostPath:
          path: /megamind/config/prowlarr
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: prowlarr
  name: prowlarr
  namespace: prowlarr
spec:
  ports:
  - name: http
    port: 9696
    protocol: TCP
    targetPort: 9696
  selector:
    app.kubernetes.io/name: prowlarr
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  ingressClassName: tailscale
  rules:
  - host: prowlarr
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              number: 9696
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prowlarr
