clusters/lab/sabnzbd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sabnzbd
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sabnzbd
  name: sabnzbd
  namespace: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:
      containers:
      - name: vpn-connect
        image: lscr.io/linuxserver/wireguard:latest
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          privileged: true
        volumeMounts:
        - name: wg-config
          mountPath: /config/wg_confs
      - image: lscr.io/linuxserver/sabnzbd:4.5.3
        name: sabnzbd
        resources:
          limits:
            memory: 8Gi
          requests:
            memory: 512Mi
            cpu: 250m
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /incomplete-downloads
          name: incomplete-downloads
        - mountPath: /downloads
          name: complete-downloads
      volumes:
      - name: config
        hostPath:
          path: /megamind/config/sabnzbd
      - name: incomplete-downloads
        hostPath:
          path: /bigdata/media/downloads/incomplete
      - name: complete-downloads
        hostPath:
          path: /bigdata/media/downloads/complete
      - name: wg-config
        secret:
          secretName: wg-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sabnzbd
  name: sabnzbd
  namespace: sabnzbd
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: sabnzbd
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  ingressClassName: tailscale
  rules:
  - host: sabnzbd
    http:
      paths:
      - backend:
          service:
            name: sabnzbd
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sabnzbd
